--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Materialistic Mimic</string>
+    <string name="vote_up">Vote Up</string>
+    <string name="save">Save</string>
+    <string name="article">Article</string>
 </resources>
