--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="loading_text">...</string>
     <string name="voted">Successfully voted</string>
     <string name="view_in_browser">View in external browser</string>
+    <string name="toast_saved">Story saved</string>
+    <string name="toast_removed">Story unsaved</string>
 </resources>
