--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,36 @@
     <string name="view_in_browser">View in external browser</string>
     <string name="toast_saved">Story saved</string>
     <string name="toast_removed">Story unsaved</string>
+    <string name="font_options">Font options</string>
+    <string name="readability">Readability</string>
+    <string name="hn_link">Hacker News Link</string>
+    <string name="article_link">Article Link</string>
+    <string name="search">Search</string>
+    <string name="reset_settings">Reset All Settings</string>
+    <string name="clear_search_history">Clear Search History</string>
+    <string name="clear_drafts">Clear All Drafts</string>
+    <string name="send">String</string>
+    <string name="submission_guidelines">Submission Guidelines</string>
+    <string name="save_draft">Save Draft</string>
+    <string name="discard_draft">Discard Draft</string>
+    <string name="formatting_guidelines">HN Formatting Guidelines</string>
+    <string name="quote">Quote</string>
+    <string name="add_comment">Add Comment</string>
+    <string name="share">Share</string>
+    <string name="refresh">Refresh</string>
+    <string name="view_user">View User</string>
+    <string name="clear_all">Clear All</string>
+    <string name="export">Export</string>
+    <string name="clear_selected">Clear Selected</string>
+    <string name="display_options">Display Options</string>
+    <string name="list_display_options">List Display Options</string>
+    <string name="range">Range</string>
+    <string name="popular_range_last_24h">Last 24h</string>
+    <string name="popular_range_past_week">Past Week</string>
+    <string name="popular_range_past_month">Past Month</string>
+    <string name="popular_range_past_year">Past Year</string>
+    <string name="search_sort_recent">More Recent</string>
+    <string name="search_sort_popularity">Popularity</string>
+    <string name="zoom_in">Zoom In</string>
+    <string name="zoom_out">Zoom Out</string>
 </resources>
