--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,27 @@
     <string name="search_sort_popularity">Popularity</string>
     <string name="zoom_in">Zoom In</string>
     <string name="zoom_out">Zoom Out</string>
+    <string name="title_activity_popular">Catch Up</string>
+    <string name="title_activity_new">New Stories</string>
+    <string name="more_sections">More Sections</string>
+    <string name="title_activity_best">Best Stories</string>
+    <string name="title_activity_show">Show HN</string>
+    <string name="title_activity_ask">Ask HN</string>
+    <string name="title_activity_jobs">Jobs</string>
+    <string name="title_activity_favorite">Saved Stories</string>
+    <string name="title_activity_user">Mr Profile</string>
+    <string name="title_activity_submit">Submit To HN</string>
+    <string name="action_settings">Settings</string>
+    <string name="feedback">Feedback</string>
+    <string name="application_info_title">Application Info</string>
+    <string name="developer_info_title">Developer Info</string>
+    <string name="libraries_title"><![CDATA[Libraries & Resources]]></string>
+    <string name="license_title">License</string>
+    <string name="third_party_licenses_title">3rd Party Licenses</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="username_hint">Username</string>
+    <string name="password_hint">Password</string>
+    <string name="login_note">Your credentials will be stored securely under your device's Settings / Account</string>
+    <string name="create_account">Create account</string>
+    <string name="comment_hint">Comment</string>
 </resources>
